<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="log_count">Log Count</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="authenticate_with_dropbox">Authenticate with Dropbox</string>
    <string name="port">Port</string>
    <string name="enabled">Enabled</string>
    <string name="remote_directory">Remote Directory</string>
    <string name="password">Password</string>
    <string name="profile_enabled">Profile Enabled</string>
    <string name="username">Username</string>
    <string name="hostname">Hostname</string>
    <string name="profile_type">Profile Type</string>
    <string name="view_log">View Log</string>
    <string name="any">Any</string>
    <string name="only_when_at_location">Only when at Location</string>
    <string name="delete_location">Delete Location</string>
    <string name="edit_location">Edit location</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_new">Add New</string>
    <string name="save">Save</string>
    <string name="profile_options">Profile Options</string>
    <string name="only_if_wifi">Only if Wifi is available</string>
    <string name="define_location">Define Location</string>
    <string name="profile_name">Profile Name</string>
    <string name="ftp_server">FTP Server</string>
    <string name="select_profile_type">Select Profile Type</string>
    <string name="profile_count">Profile Count</string>
    <string name="add_profile">Add profile</string>
    <string name="ftp_path">FTP Path</string>
    <string name="ftp_password">FTP Password</string>
    <string name="ftp_username">FTP Username</string>
    <string name="ftp_host">FTP Host</string>
    <string name="local_directory">Local Directory</string>
    <string name="app_name">SyncDroid SD</string>
	<string name="remote_service_started">Remote Service started</string>
	<string name="remote_service_stopped">Remote Service stopped</string>
	<string name="remote_service_connected">Remote Service connected</string>
	<string name="remote_service_disconnected">Remote Service disconnected</string>
	<string name="remote_service_label">Remote Service Label</string>
    <string name="sync_type">Synchronization Type</string>
    <string name="clear_dropbox_auth">Clear Dropbox Authentication Data</string>
    <string name="begin_scan">Begin Scan</string>
    <string name="clear_list">Clear List</string>
    <string name="end_scan">Stop Scan</string>
    <string name="location_name">Location Name</string>
    <string name="pref_updateInterval_title">Update Interval</string>
    <string name="pref_updateInterval_summary">Interval in minutes in which the configured profiles are checked for changes.</string>
    <string name="pref_onlyWhenScreenOn_title">Only when Screen on</string>
    <string name="pref_onlyWhenScreenOn_summary">When checked, Profile checking only occurs if screen is on</string>
    <string name="pref_wakeUpPhone_title">Wake up the phone</string>
    <string name="pref_wakeUpPhone_summary">When checked, a sleeping phone will wake up to check for changes.</string>
    <string name="settings">Settings</string>
    <string name="pref_updateInterval_default">5</string>
    <string name="force_check">Check</string>
<string name="email">E-Mail</string>
</resources>
