<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ConnectBot: simple, powerful, open-source SSH client for Android
 * Copyright 2007 Kenny Root, Jeffrey Sharkey
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
            android:key="updateInterval"
            android:defaultValue="@string/pref_updateInterval_default"
            android:title="@string/pref_updateInterval_title"
            android:summary="@string/pref_updateInterval_summary"
            android:numeric="integer"
           />

	<CheckBoxPreference
		android:key="onlyWhenScreenOn"
		android:title="@string/pref_onlyWhenScreenOn_title"
		android:summary="@string/pref_onlyWhenScreenOn_summary"
		android:defaultValue="false"
		/>

	<CheckBoxPreference
		android:key="wakeUpPhone"
		android:title="@string/pref_wakeUpPhone_title"
		android:summary="@string/pref_wakeUpPhone_summary"
		android:defaultValue="false"
		/>

</PreferenceScreen>
